--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "i18next": "^19.2.0",
     "i18next-browser-languagedetector": "^4.0.1",
-    "i18next-xhr-backend": "^3.2.2",
-    "node-sass": "4.14.1",
+    "i18next-xhr-backend": "^3.2.2", 
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-history": "^0.2.3",
     "react-scripts": "3.4.1",
     "react-i18next": "^11.3.3",
     "reactstrap": "^8.4.1"
